--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,13 @@
             <scope>runtime</scope>
         </dependency>
 
+        <!-- docker -->
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <scope>test</scope>
+        </dependency>
+
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
