--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,7 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=update
 server.forward-headers-strategy=framework
+logging.level.org.springframework.security=DEBUG
 
 
 #spring.datasource.url=jdbc:mysql://localhost:3306/day1?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=Asia/Ho_Chi_Minh
